fix: image placeholder position & hide navbar tooltip on smaller screen

--- a/src/components/BottomNavigationBar/BottomNavigationBar.css
+++ b/src/components/BottomNavigationBar/BottomNavigationBar.css
@@ -34,6 +34,10 @@
   .nav {
     --bottom-nav-bar-offset: 16px;
   }
+
+  .tip {
+    display: none;
+  }
 }
 
 .tip {
